2009-09-29  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCommandMain): Add
	alias 'dirs' to 'mkdirs' command.

2009-09-28  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildProgramVersion): Add
	option 'short'.

2009-09-27  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/libcheck.sh: (CygbuildCmdInstallCheckBinFiles):
	Ignore *.dll and *.pyc files and others. Change
	for loop to more efficient while loop which preferves
	file names correctly. Use stat(1) to read file size.
	(CygbuildCmdInstallCheckEverything): Use real if-statements.
	This fixes 'stat' value settings.

	* bin/cygbuild.sh (CygbuildMakefileRunInstallPythonFix):
	Adjust 'may take a while..." message.
	(CygbuildFileSizeRead): Improve handling of file names
	with spaces.
	(CygbuildFileSize): Add quotes.
	(CygbuildInstallFixInterpreterGeneric): Improve message.
	(CygbuildProgramVersion): Do not announce URL by default.
	(CYGBUILD_AUTHOR): New variable.
	(CYGBUILD_LICENSE): New variable.
	(CygbuildProgramVersion): Display CYGBUILD_AUTHOR
	and CYGBUILD_LICENSE

2009-09-25  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildDefineGlobalCommands): Define
	command stat(1) in variable STAT.
	(CygbuildFileSizeRead): New. Use stat(1) where available.
	(CygbuildFileSize); use more robust
	`CygbuildFileSizeRead'.

	* bin/lib/libcheck.sh: (CygbuildCmdInstallCheckBinFiles):
	Correct ls -l output handling: Read file sizes correctly.

2009-09-16  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh:
	(CygbuildMatchGlob): New.
	(CygbuildDefineGlobalCommands): Add missing double quote.
	(CygbuildSrcDirCheck): Adjust message.
	(CygbuildCmdDownloadUpstream): change external
	command name from 'mywebget' to 'pwget'. Use
	'type -p', not which(1).

2009-08-06    Jari Aalto  <jari.aalto@cante.net>

	* bin/Makefile (install-man): Call target 'man'.
	(INSTALL_OBJS_MAN1): Remove unneeded lib/*.1

	* bin/cygbuild.sh: (CygbuildCommandMain):