@@ -1,3 +1,15 @@
+2009-09-30  Jari Aalto  <jari.aalto@cante.net>
+
+	* bin/lib/libcheck.sh: (CygbuildCmdInstallCheckBinFiles):
+	Correct *Waen() call to *Warn().
+
+	* bin/cygbuild.sh: Call CygbuildChmodExec().
+	Return correct status.
+	(CygbuildPostinstallWriteStanza): remove
+	CygbuildChmodExec(). Add more quoting.
+	(CygbuildInstallCygwinPartPostinstall): Install
+	with modes 755, not 644.
+
 2009-09-29  Jari Aalto  <jari.aalto@cante.net>
 
 	* bin/cygbuild.sh: (CygbuildCommandMain): Add
